# WellSketch

./: .gitignore  CMakeLists.txt  README.md
LCPlot/: CMakeLists.txt  qcustomplot.cpp
LCore/: CMakeLists.txt  DelegatePatternFill.cpp  DelegatePatternFill.h  PropertyEditor.cpp  PropertyEditor.h
LLogPlotViewer/: AbstractPlotTrack.cpp  AbstractPlotTrack.h  CMakeLists.txt  ContinuousPlotItem.cpp  ContinuousPlotItem.h  ContinuousPlotTrack.cpp  ContinuousPlotTrack.h  DepthScaleTrack.cpp  DepthScaleTrack.h  MercuryDataType.h
WellSketchViewer/: CMakeLists.txt  LogPlotWidget.cpp  LogPlotWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  styles.css  test_data.qrc
WellSketchViewer/ComponentsLibrary/: ComponentsTableView.h  componentlibrarywidget.cpp  componentlibrarywidget.h  componentsmodel.cpp  componentsmodel.h  componentstableview.cpp  headerwidget.cpp  headerwidget.h  icontextdelegate.cpp  icontextdelegate.h  logwidget.cpp  logwidget.h
WellSketchViewer/PropertiesWidget/: propertiesview.cpp  propertiesview.h  wellcomponentitem.cpp  wellcomponentitem.h
WellSketchViewer/WellSchematic/: depthscalewidget.cpp  depthscalewidget.h  wellopenglwidget.cpp  wellopenglwidget.h  wellprofilewidget.cpp  wellprofilewidget.h  wellschematicviewwidget.cpp  wellschematicviewwidget.h
WellSketchViewer/WellSchematicTree/: wellschematictree.cpp  wellschematictree.h
WellSketchViewer/resources/: test_curve.json
cmake/: utility.cmake
docs/: API pipes parameters.xlsx
